--- a/_includes/dc/setup.html
+++ b/_includes/dc/setup.html
@@ -26,6 +26,7 @@ Ecology workshops
     the workshop overview site</a>.
 </p>
 
+
 {% elsif info.flavor == "python" %}
 <p>
   The setup instructions for the Data Carpentry Ecology workshops (with Python)
@@ -74,6 +75,11 @@ Geospatial workshops
 
 {% elsif info.curriculum == "dc-geospatial" %}
 <p>The setup instructions for the Data Carpentry Geospatial workshop can be found at <a href="https://datacarpentry.org/geospatial-workshop/setup.html">the workshop overview site</a>.</p>
+
+
+
+{% elsif info.curriculum == "dc-image-processing" %}
+<p>The setup instructions for our Data Carpentry Image Processing workshops can be found at <a href="https://github.com/esciencecenter-digital-skills/image-processing">the workshop overview site</a></p>.
 
 {% else %}
 {% include warning-curriculum.html %}
