--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -108,11 +108,9 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr><td>Morning</td> <td> <a href="https://github.com/esciencecenter-digital-skills/image-processing">Schedule online</a></td></tr>
+      <tr><td>Morning and afternoon</td> <td> <a href="https://github.com/esciencecenter-digital-skills/image-processing">Schedule online</a></td></tr>
       <tr>
-      </tr>
-      <tr> <td>Afternoon</td><td><a href="https://github.com/esciencecenter-digital-skills/image-processing">Schedule online</a></td></tr>
-      <tr>
+
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
